; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_describe.c_git_describe_workdir.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_describe.c_git_describe_workdir.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32 }

@GIT_STATUS_OPTIONS_INIT = common dso_local global i32 0, align 4
@GIT_HEAD_FILE = common dso_local global i32 0, align 4
@GIT_OBJECT_COMMIT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @git_describe_workdir(%struct.TYPE_5__** %0, i32* %1, i32* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_5__**, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32*, align 8
  %11 = alloca i32, align 4
  %12 = alloca %struct.TYPE_5__*, align 8
  %13 = alloca i32*, align 8
  store %struct.TYPE_5__** %0, %struct.TYPE_5__*** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32* %2, i32** %7, align 8
  store i32* null, i32** %10, align 8
  %14 = load i32, i32* @GIT_STATUS_OPTIONS_INIT, align 4
  store i32 %14, i32* %11, align 4
  store %struct.TYPE_5__* null, %struct.TYPE_5__** %12, align 8
  %15 = load i32*, i32** %6, align 8
  %16 = load i32, i32* @GIT_HEAD_FILE, align 4
  %17 = call i32 @git_reference_name_to_id(i32* %9, i32* %15, i32 %16)
  store i32 %17, i32* %8, align 4
  %18 = icmp slt i32 %17, 0
  br i1 %18, label %19, label %21

19:                                               ; preds = %3
  %20 = load i32, i32* %8, align 4
  store i32 %20, i32* %4, align 4
  br label %62

21:                                               ; preds = %3
  %22 = load i32*, i32** %6, align 8
  %23 = load i32, i32* @GIT_OBJECT_COMMIT, align 4
  %24 = call i32 @git_object_lookup(i32** %13, i32* %22, i32* %9, i32 %23)
  store i32 %24, i32* %8, align 4
  %25 = icmp slt i32 %24, 0
  br i1 %25, label %26, label %28

26:                                               ; preds = %21
  %27 = load i32, i32* %8, align 4
  store i32 %27, i32* %4, align 4
  br label %62

28:                                               ; preds = %21
  %29 = load i32*, i32** %13, align 8
  %30 = load i32*, i32** %7, align 8
  %31 = call i32 @git_describe_commit(%struct.TYPE_5__** %12, i32* %29, i32* %30)
  store i32 %31, i32* %8, align 4
  %32 = icmp slt i32 %31, 0
  br i1 %32, label %33, label %34

33:                                               ; preds = %28
  br label %47

34:                                               ; preds = %28
  %35 = load i32*, i32** %6, align 8
  %36 = call i32 @git_status_list_new(i32** %10, i32* %35, i32* %11)
  store i32 %36, i32* %8, align 4
  %37 = icmp slt i32 %36, 0
  br i1 %37, label %38, label %39

38:                                               ; preds = %34
  br label %47

39:                                               ; preds = %34
  %40 = load i32*, i32** %10, align 8
  %41 = call i64 @git_status_list_entrycount(i32* %40)
  %42 = icmp sgt i64 %41, 0
  br i1 %42, label %43, label %46

43:                                               ; preds = %39
  %44 = load %struct.TYPE_5__*, %struct.TYPE_5__** %12, align 8
  %45 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %44, i32 0, i32 0
  store i32 1, i32* %45, align 4
  br label %46

46:                                               ; preds = %43, %39
  br label %47

47:                                               ; preds = %46, %38, %33
  %48 = load i32*, i32** %13, align 8
  %49 = call i32 @git_object_free(i32* %48)
  %50 = load i32*, i32** %10, align 8
  %51 = call i32 @git_status_list_free(i32* %50)
  %52 = load i32, i32* %8, align 4
  %53 = icmp slt i32 %52, 0
  br i1 %53, label %54, label %57

54:                                               ; preds = %47
  %55 = load %struct.TYPE_5__*, %struct.TYPE_5__** %12, align 8
  %56 = call i32 @git_describe_result_free(%struct.TYPE_5__* %55)
  br label %60

57:                                               ; preds = %47
  %58 = load %struct.TYPE_5__*, %struct.TYPE_5__** %12, align 8
  %59 = load %struct.TYPE_5__**, %struct.TYPE_5__*** %5, align 8
  store %struct.TYPE_5__* %58, %struct.TYPE_5__** %59, align 8
  br label %60

60:                                               ; preds = %57, %54
  %61 = load i32, i32* %8, align 4
  store i32 %61, i32* %4, align 4
  br label %62

62:                                               ; preds = %60, %26, %19
  %63 = load i32, i32* %4, align 4
  ret i32 %63
}

declare dso_local i32 @git_reference_name_to_id(i32*, i32*, i32) #1

declare dso_local i32 @git_object_lookup(i32**, i32*, i32*, i32) #1

declare dso_local i32 @git_describe_commit(%struct.TYPE_5__**, i32*, i32*) #1

declare dso_local i32 @git_status_list_new(i32**, i32*, i32*) #1

declare dso_local i64 @git_status_list_entrycount(i32*) #1

declare dso_local i32 @git_object_free(i32*) #1

declare dso_local i32 @git_status_list_free(i32*) #1

declare dso_local i32 @git_describe_result_free(%struct.TYPE_5__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
